Bug 412576 - vCard imports that use item1.ADR do not show card's street address
Summary: vCard imports that use item1.ADR do not show card's street address
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.11.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-03 19:27 UTC by cberlinger
Modified: 2019-10-04 05:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.13.0
Sentry Crash Report:


Attachments
Sample VCF file that doesn't work (339 bytes, text/vcard)
2019-10-03 19:27 UTC, cberlinger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description cberlinger 2019-10-03 19:27:42 UTC
Created attachment 122999 [details]
Sample VCF file that doesn't work

SUMMARY
vCard 3.0 files which contain street addresses formatted as item1.ADR fail to display the address in the contact card view. Note these vcards were made by Apple's Contacts app. 

STEPS TO REPRODUCE
1. Import sample vCard 3.0 file into kaddressbook with an address like: item1.ADR;TYPE=WORK,pref:;;STREET;CITY;STATE;ZIP;COUNTRY  
2. Card appears, but when clicked no address is visible. 

OBSERVED RESULT
The card imports but no street address is visible. According to an old W3.org post regarding the VCARD 3.0 protocol (https://www.w3.org/2002/12/cal/vcard-notes.html), the format appears to be legitmate. Same card imported into Gnome's Evolution 3.22 shows the address.     

EXPECTED RESULT
Address of contact card should be visible.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Fedora 30
(available in About System)
KDE Plasma Version: 5.15.5
KDE Frameworks Version: 5.59.0 
Qt Version: 5.12.4

ADDITIONAL INFORMATION
Comment 1 Laurent Montel 2019-10-04 05:58:32 UTC
Git commit 979a80bb55d7b83e8cc6cde8fb303e1540eab9f6 by Laurent Montel.
Committed on 04/10/2019 at 05:58.
Pushed by mlaurent into branch 'master'.

Fix Bug 412576 - vCard imports that use item1.ADR do not show card's street address
FIXED-IN: 5.13.0

M  +1    -1    autotests/data/vcardwithitemasapplesupport.vcf.ref
M  +1    -2    src/vcardtool.cpp

https://commits.kde.org/kcontacts/979a80bb55d7b83e8cc6cde8fb303e1540eab9f6