Fix Bug 412576 - vCard imports that use item1.ADR do not show card's street address

BUG: 412576
FIXED-IN: 5.13.0